# lab1

./: CMakeLists.txt
include/: BonusDice.hpp  Dice.hpp  DoubleDice.hpp  PenaltyDice.hpp  Rollable.hpp  ThreeDicePool.hpp
src/: BonusDice.cpp  Dice.cpp  DoubleDice.cpp  PenaltyDice.cpp  ThreeDicePoll.cpp  main.cpp
