cmake_minimum_required(VERSION 3.20)
project(lab1 LANGUAGES CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
set(MAIN_SOURCES src/main.cpp src/Dice.cpp src/ThreeDicePoll.cpp src/BonusDice.cpp src/PenaltyDice.cpp)

add_executable(main ${MAIN_SOURCES})